# VELO_GAME

./: CMakeLists.txt  Makefile  README.md  Readme
include/: collectables.h  crono.h  eplayers.h  maingame.h  player.h
src/: collectables.cpp  crono.cpp  eplayers.cpp  main.cpp  maingame.cpp  player.cpp
